test-cases/final-dump/trait_error_abstract_proc_purity.wybe
# Verify trait implementation purity must match the abstract procedure.

type observer trait {
    abstract {semipure} observe(x:_)
}

impl int <: observer

def {impure} observe(x:int) {
    pass
}
